--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -35,7 +35,7 @@
 		border-top: #02bad0 5px solid; //#4a4949
 		max-width:900%;
 		max-width: 900px;
-		margin: auto;
+		margin: 5% auto;
 		top: 0;
 		bottom: 0;
 		left: 0;
@@ -81,6 +81,28 @@
 		width: 100%;
 
 	}
+	.node .image{
+		display: none;
+		width: 0px !important;
+	}
+	.node .col{
+		width: 100% !important;
+	}
+	.node.active .description{
+		height:90px !important;
+	}
+	.node.active .description img{
+		display:none;
+	}
+	.node.active .description h6{
+		font-size:12px;
+	}
+	.node.active .description p{
+		font-size:10px;
+	}
+	.node:hover .description, .node.active .description{
+		width:150px !important;
+	}
 	td, th {
 		padding: 5px 5px !important;
 	}
@@ -122,9 +144,6 @@
 	.loading .main-section .stage{
 		height: 75%;
 	}
-	/*.node .title{
-		display: block !important;
-	}*/
 	svg{
 		width:350px !important;
 	}
