--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -893,9 +893,9 @@ ul.skills {
 
 .overlap-gradient{
 	width:100%;
-	height: 100%;
-	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
-	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
+	height: 94%;
+	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
+	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
 }
@@ -1516,7 +1516,7 @@ p.label {
      color: #fff;
      background-color: rgba(0, 0, 0, 1);
      z-index:  10000;
-     margin-bottom: 0px !important;
+     margin-bottom: 103px !important;
      /* top: 20px; */
 }
 #fp-nav{
