--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -893,7 +893,7 @@ ul.skills {
 
 .overlap-gradient{
 	width:100%;
-	height: 94%;
+	/* height: 94%; */
 	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
@@ -1508,15 +1508,15 @@ p.label {
     margin-right:10px;
 }
 .footer-section {
-     position: relative;
-     /* bottom: 0%; */
+     position: absolute;
+     bottom: 0%;
      /* height: 50px; */
      width: 100%;
      padding: 5px;
      color: #fff;
      background-color: rgba(0, 0, 0, 1);
      z-index:  10000;
-     margin-bottom: 10px !important;
+     margin-bottom: 0px !important;
 }
 #fp-nav{
     display:none;
