--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -128,7 +128,7 @@
 		position: relative;
 	}
 	.footer-section {
-		position: relative;
+		margin-bottom: 50px !important;
 	}
 	.text{
 		margin: auto;
