--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1516,7 +1516,7 @@ p.label {
      color: #fff;
      background-color: rgba(0, 0, 0, 1);
      z-index:  10000;
-     margin-bottom: 0px !important;
+     margin-bottom: 0px;
 }
 #fp-nav{
     display:none;
@@ -1611,5 +1611,5 @@ label{
     /* position:relative; */
     /* top: 20%; */
     /* margin-top: 50px; */
-    padding: 50px 0px 100px 0px;
+    padding: 50px 0px 200px 0px;
 }
