--- a/assets/css/responsive-ios.css
+++ b/assets/css/responsive-ios.css
@@ -215,14 +215,13 @@
 		margin: 0 auto;
 		position:relative;
 		top: 20%;
-		margin-top: 50px;
+		/*margin-top: 50px;*/
 	}
 	.form_holder{
 		position: relative;
 	}
 	.footer-section {
 		position: relative;
-		margin-bottom: 0px !important;
 	}
 	.text{
 		margin: auto;
