--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -50,7 +50,7 @@
 }
 
 /*tablet*/
-@media only screen and (min-width: 768px) and (max-width: 1024px){
+@media only screen and (min-width: 640px) and (max-width: 1024px){
 	h4 {
 	    font-size: 30px !important;
 	}
@@ -122,13 +122,13 @@
 	.holder{
 		width: 95%;
 		margin: 0 auto;
-		margin-top: 0px !important;
+		/*margin-top: 50px !important;*/
 	}
 	.form_holder{
 		position: relative;
 	}
 	.footer-section {
-		margin-bottom: 0px !important;
+		/*margin-bottom: 50px !important;*/
 	}
 	.text{
 		margin: auto;
@@ -191,7 +191,7 @@
 }
 
 /*smartphone*/
-@media screen and (max-width: 767px){ 
+@media screen and (max-width: 640px){ 
 	#display_pillar .panel {
 	    width: 100%;
 	    height: 25%;
