--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,9 @@ h4, h5, h6 {
     width: 100%;
     height: 100%;
 }
+/*.fp-scroller{
+    height: 100%;
+}*/
 .wrap {
     margin-left: auto;
     margin-right: auto;
@@ -893,7 +896,7 @@ ul.skills {
 
 .overlap-gradient{
 	width:100%;
-	 height: 95%; 
+    height: 93%;
 	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
@@ -1486,9 +1489,9 @@ p.label {
     display: none;
     background: transparent;
 }
-.contact-section .layer{
+/*.contact-section .layer{
      padding: 10px 0px 10% 0px; 
-}
+}*/
 
 .footer-section ul li{
     min-width: 40px;
@@ -1509,12 +1512,12 @@ p.label {
 }
 .footer-section {
      position: relative;
-     bottom: 0%;
+     bottom: 1%;
      /* height: 50px; */
      width: 100%;
-     padding: 5px;
+     /*padding: 5px;*/
      color: #fff;
-     background-color: rgba(0, 0, 0, 1);
+     background-color: rgba(0, 0, 0, 0.8);
      z-index:  10000;
      margin-bottom: 0px;
 }
@@ -1606,5 +1609,5 @@ label{
 }
 
 .holder{
-    padding: 50px 0px 150px 0px;
+    padding: 20px 0 0 0;
 }
