--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -896,7 +896,7 @@ ul.skills {
 
 .overlap-gradient{
 	width:100%;
-    height: 93%;
+    height: calc(100% - 60px);
 	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
 	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
@@ -1051,8 +1051,9 @@ div[data-anchor="home"] .fp-tableCell{
 
 
 .bulleted{
-    font-size: 10px;
-    margin-right:20px;
+    font-size: 10px !important;
+    margin-right: 20px;
+    margin-top: 4px;
 }
 
 .paragraph{
