--- a/assets/css/responsive-ios.css
+++ b/assets/css/responsive-ios.css
@@ -265,7 +265,7 @@
 
 }
 /*iPhone*/
-@media only screen and (max-device-width: 767px) {
+@media only screen and (min-width: 375px)(max-device-width: 767px) {
 	#display_pillar .panel {
 	    width: 100%;
 	    height: 25%;
