--- a/assets/css/responsive-ios.css
+++ b/assets/css/responsive-ios.css
@@ -113,6 +113,9 @@
 		background-attachment: scroll !important;
 		background-position: -800px !important;
 	}
+	.footer-section{
+		position: absolute !important;
+	}
 }
 /*iPad*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px){
