--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -344,42 +344,42 @@
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#backend {
 		background-size: cover !important;
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#frontend {
 		background-size: cover !important;
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#social {
 		background-size: cover !important;
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#webdev {
 		background-size: cover !important;
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#marketing {
 		background-size: cover !important;
 		background-position: center !important;
 		background-attachment: scroll !important;
 		width: 100%;
-		height: 248px;
+		height: 248px !important;
 	}
 	#display_pillar{
 		height:100%;
