--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-405/* Desktop */
+/* Desktop */
 @media screen and (min-width: 1025px){
 	h4 {
 	    font-size: 30px !important;
@@ -402,7 +402,7 @@
 	svg{
 		width:600px !important;
 	}
-	/*.footer{
+	.footer{
 		padding: 0 .6rem !important;
-	}*/
+	}
 }
