--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1385,42 +1385,42 @@ body.home{
     background-size: cover;
     background-position: -400px;
     background-attachment: fixed;
-    height: 1024px;
+    height: 100%;
 }
 #backend {
     background: url(../images/services/bgbackend.png) no-repeat;
     background-size: cover;
     background-position: -200px;
     background-attachment: fixed;
-    height: 1024px;
+    height: 100%;
 }
 #frontend {
     background: url(../images/services/frontend.png) no-repeat;
     background-size: cover;
     background-position: -600px;
     background-attachment:  fixed;
-    height: 1050px;
+    height: 100%;
 }
 #social {
     background: url(../images/services/bgsocial.png) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    height: 1024px;
+    height: 100%;
 }
 #webdev {
     background: url(../images/services/webdev.png) no-repeat;
     background-size: cover;
     background-position: -300px;
     background-attachment: fixed;
-    height: 1024px;
+    height: 100%;
 }
 #marketing {
     background: url(../images/services/bgmarketing.png) no-repeat;
     background-size: cover;
     background-position: -600px;
     background-attachment: fixed;
-    height: 1024px;
+    height: 100%;
 }
 #backcon {
     background: url(../images/services/bgcontact.jpg) no-repeat;
